[gd_scene load_steps=4 format=2]

[ext_resource path="res://Minigame.gd" type="Script" id=1]
[ext_resource path="res://assets/node.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 84.0
height = 504.0

[node name="Minigame" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="MinigameSprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="MinigameHitBox" type="CollisionShape2D" parent="."]
position = Vector2( -27, -53 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Minigame_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Minigame_body_exited"]
